Testes/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ListaTorneios
Rule 1     ListaTorneios -> [ Torneios ]
Rule 2     Torneios -> Torneio Torneios_Resto
Rule 3     Torneios_Resto -> , Torneios
Rule 4     Torneios_Resto -> <empty>
Rule 5     Torneio -> ( data : maxEq Equipas )
Rule 6     Equipas -> nomeEquipa Equipas_Resto
Rule 7     Equipas_Resto -> , nomeEquipa Equipas_Resto
Rule 8     Equipas_Resto -> <empty>

Terminals, with rules where they appear

(                    : 5
)                    : 5
,                    : 3 7
:                    : 5
[                    : 1
]                    : 1
data                 : 5
error                : 
maxEq                : 5
nomeEquipa           : 6 7

Nonterminals, with rules where they appear

Equipas              : 5
Equipas_Resto        : 6 7
ListaTorneios        : 0
Torneio              : 2
Torneios             : 1 3
Torneios_Resto       : 2

Parsing method: LALR

state 0

    (0) S' -> . ListaTorneios
    (1) ListaTorneios -> . [ Torneios ]

    [               shift and go to state 2

    ListaTorneios                  shift and go to state 1

state 1

    (0) S' -> ListaTorneios .



state 2

    (1) ListaTorneios -> [ . Torneios ]
    (2) Torneios -> . Torneio Torneios_Resto
    (5) Torneio -> . ( data : maxEq Equipas )

    (               shift and go to state 5

    Torneios                       shift and go to state 3
    Torneio                        shift and go to state 4

state 3

    (1) ListaTorneios -> [ Torneios . ]

    ]               shift and go to state 6


state 4

    (2) Torneios -> Torneio . Torneios_Resto
    (3) Torneios_Resto -> . , Torneios
    (4) Torneios_Resto -> .

    ,               shift and go to state 8
    ]               reduce using rule 4 (Torneios_Resto -> .)

    Torneios_Resto                 shift and go to state 7

state 5

    (5) Torneio -> ( . data : maxEq Equipas )

    data            shift and go to state 9


state 6

    (1) ListaTorneios -> [ Torneios ] .

    $end            reduce using rule 1 (ListaTorneios -> [ Torneios ] .)


state 7

    (2) Torneios -> Torneio Torneios_Resto .

    ]               reduce using rule 2 (Torneios -> Torneio Torneios_Resto .)


state 8

    (3) Torneios_Resto -> , . Torneios
    (2) Torneios -> . Torneio Torneios_Resto
    (5) Torneio -> . ( data : maxEq Equipas )

    (               shift and go to state 5

    Torneios                       shift and go to state 10
    Torneio                        shift and go to state 4

state 9

    (5) Torneio -> ( data . : maxEq Equipas )

    :               shift and go to state 11


state 10

    (3) Torneios_Resto -> , Torneios .

    ]               reduce using rule 3 (Torneios_Resto -> , Torneios .)


state 11

    (5) Torneio -> ( data : . maxEq Equipas )

    maxEq           shift and go to state 12


state 12

    (5) Torneio -> ( data : maxEq . Equipas )
    (6) Equipas -> . nomeEquipa Equipas_Resto

    nomeEquipa      shift and go to state 14

    Equipas                        shift and go to state 13

state 13

    (5) Torneio -> ( data : maxEq Equipas . )

    )               shift and go to state 15


state 14

    (6) Equipas -> nomeEquipa . Equipas_Resto
    (7) Equipas_Resto -> . , nomeEquipa Equipas_Resto
    (8) Equipas_Resto -> .

    ,               shift and go to state 17
    )               reduce using rule 8 (Equipas_Resto -> .)

    Equipas_Resto                  shift and go to state 16

state 15

    (5) Torneio -> ( data : maxEq Equipas ) .

    ,               reduce using rule 5 (Torneio -> ( data : maxEq Equipas ) .)
    ]               reduce using rule 5 (Torneio -> ( data : maxEq Equipas ) .)


state 16

    (6) Equipas -> nomeEquipa Equipas_Resto .

    )               reduce using rule 6 (Equipas -> nomeEquipa Equipas_Resto .)


state 17

    (7) Equipas_Resto -> , . nomeEquipa Equipas_Resto

    nomeEquipa      shift and go to state 18


state 18

    (7) Equipas_Resto -> , nomeEquipa . Equipas_Resto
    (7) Equipas_Resto -> . , nomeEquipa Equipas_Resto
    (8) Equipas_Resto -> .

    ,               shift and go to state 17
    )               reduce using rule 8 (Equipas_Resto -> .)

    Equipas_Resto                  shift and go to state 19

state 19

    (7) Equipas_Resto -> , nomeEquipa Equipas_Resto .

    )               reduce using rule 7 (Equipas_Resto -> , nomeEquipa Equipas_Resto .)

